Fixed bugs with favicon icon and removed unnecessary logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Home</title>
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect x='20' y='30' width='60' height='55' rx='4' fill='%234a90e2' opacity='0.3' stroke='%234a90e2' stroke-width='3'/><path d='M50 30V15M50 15L42 25M50 15L58 25' stroke='%234a90e2' stroke-width='3' stroke-linecap='round'/><circle cx='35' cy='50' r='4' fill='%234a90e2'/><circle cx='65' cy='50' r='4' fill='%234a90e2'/><circle cx='35' cy='70' r='4' fill='%234a90e2'/><circle cx='65' cy='70' r='4' fill='%234a90e2'/></svg>"
+      type="image/svg+xml"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <script
       src="https://unpkg.com/htmx.org@1.9.10"
