Added the ability to reset to factory settings and clear event logs and improved the code

--- a/index.components-manager.partial.html
+++ b/index.components-manager.partial.html
@@ -33,8 +33,7 @@
           id="component-type-select"
           class="component-action__input"
         >
-          <option value="generic">Generic Device</option>
-          <option value="light">Light</option>
+          <option value="light">Light / Lamp</option>
           <option value="thermostat">Thermostat</option>
           <option value="lock">Smart Lock</option>
           <option value="camera">Camera</option>
