create component changed to a modal window for better display

--- a/index.components-manager.partial.html
+++ b/index.components-manager.partial.html
@@ -11,6 +11,7 @@
       method="get"
       class="component-action__form"
       id="component-action-form"
+      style="display: none"
     >
       <div class="component-action__input-group">
         <label for="component-name-input" class="component-action__label">
